# JNTUA-result-analyser

./: db.sqlite3  manage.py  odb.sqlite3  pyproject.toml
result_analyser_project/: asgi.py  settings.py  urls.py  wsgi.py
results_api/: admin.py  models.py  serializers.py  urls.py  views.py
results_api/migrations/: 0001_initial.py  0002_alter_result_credit.py  0003_auto_20210430_2024.py  0004_semestergpa.py  0005_rename_gpa_semestergpa_sgpa.py  0006_subject_semester.py  0007_semestergpa_percentile.py  0008_feedback.py  0009_auto_20210502_1237.py  0010_result_regular.py  0011_result_semester.py  0012_remove_result_regular.py  0013_alter_semestergpa_semester.py
